--- a/website.html
+++ b/website.html
@@ -64,7 +64,7 @@
              <br>
             Abrar Hussain
             <br>
-            CEO of the ENTREPRENEURS
+            CEO of the ABRARIANS
 
         </div>
         <div class="col right">
