--- a/website.html
+++ b/website.html
@@ -53,7 +53,7 @@
 <div class="container-two">
     <div class="row">
         <div class="col left">
-            ___ABOUT ENTREPRENEURS
+            ___ABOUT ABRARIANS
 
             <h1>Most Trusted business consulting agency</h1>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolore labore amet consequuntur incidunt, voluptate veritatis dignissimos nisi itaque asperiores nihil recusandae, debitis qui corporis adipisci autem assumenda et error.
